// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<SideNav /> can be \`fixed\` 1`] = `
<Fragment>
  <button
    className="trigger hide-on-large-only sidenav-trigger"
    data-target="sidenav_mockId"
  >
    Show sidenav
  </button>
  <ul
    className="sidenav sidenav-fixed"
    id="sidenav_mockId"
  />
</Fragment>
`;

exports[`<SideNav /> is \`fixed\` if no trigger is passed 1`] = `
<Fragment>
  <ul
    className="sidenav sidenav-fixed"
    id="sidenav_mockId"
  />
</Fragment>
`;

exports[`<SideNav /> renders 1`] = `
<Fragment>
  <button
    className="trigger show-on-large sidenav-trigger"
    data-target="sidenav_mockId"
  >
    Show sidenav
  </button>
  <ul
    className="sidenav"
    id="sidenav_mockId"
  />
</Fragment>
`;

exports[`<SideNav /> renders 2`] = `
<Fragment>
  <button
    className="trigger show-on-large sidenav-trigger"
    data-target="test"
  >
    Show sidenav
  </button>
  <ul
    className="sidenav"
    id="test"
  />
</Fragment>
`;

exports[`<SideNav /> renders children 1`] = `
<Fragment>
  <button
    className="trigger show-on-large sidenav-trigger"
    data-target="sidenav_mockId"
  >
    Show sidenav
  </button>
  <ul
    className="sidenav"
    id="sidenav_mockId"
  >
    <span
      className="test-child"
    />
  </ul>
</Fragment>
`;
